--- a/.gitignore
+++ b/.gitignore
@@ -92,7 +92,7 @@ Temporary Items
 .idea/**/tasks.xml
 .idea/**/dictionaries
 .idea/**/shelf
-
+.idea/**
 # Sensitive or high-churn files
 .idea/**/dataSources/
 .idea/**/dataSources.ids
